--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="hero-title">
-            <h1>Bingung Besok Pilih Mapel? Biar Jadwal Otomatis yang Atur</h1>
+            <h1>Bingung Besok Mapel Apa? Biar Jadwal Otomatis Yang Kasi Tau</h1>
         </div>
 
         <div class="subtitle">
@@ -34,7 +34,7 @@
                 <option value="kamis">Kamis</option>
                 <option value="jumat">Jumat</option>
             </select>
-            <button id="checkButton">Lihat Jadwal</button>
+            <button id="checkButton">Cek Jadwal</button>
         </div>
 
         <div id="result" class="result-container hidden">
